--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>IT Girl Blog</title>
+        <h1>
+            Kate Batista's Biography
+        </h1>
     </head>
 
     <body>
