--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </head>
 
     <body>
+        <div class="container">
+            <div class="row" > 
+                <div class="col-sm-12">
         <h1>
             Kate Batista's Biography
         </h1>
@@ -40,5 +43,8 @@
         on campus I am familiar with the surroundings. 
         </p>
        </h4>
+        </div>
+            </div>
+                </div>
     </body>
 </html>
