--- a/blog.html
+++ b/blog.html
@@ -10,19 +10,24 @@
         <h1>
             Maureen Baginski         
         </h1>
+    <p>
     <h2>
         Crytology Research Blog
     </h2>
+    </p>
     <h4>
         <p>
-            a. What kind of work does/did she do? What are her significant accomplishments?
-            Maureen Baginski began working as a cryptologist as a Russian language instructor in 1979 in Russia. 
+            Maureen Baginski began working as a cryptologist as a Russian language instructor in 1979 in Russia, the NSA during 9/11, and the FBI. 
         </p>
         <p>
-            Baginski was involved in the 9/11 terriost as she was able to guide the actions of the NSA directly following the attacks. 
-            She  worked for The National Security Operations Center and the Signals Intelligence (SIGINT) as an officer for many years as a cryptologist. However, she was trasnferred to the FBI where she became the director of Intelligence from 2003-2005
+            Baginski was involved in the 9/11 terriost as she was able to guide the actions of the NSA directly following the attacks.
         </p>
-        c. When did this work take place?
+        <p>
+            She  worked for The National Security Operations Center and the Signals Intelligence (SIGINT) as an officer for many years as a cryptologist. However, she was trasnferred to the FBI where she became the director of Intelligence from 2003-2005. After this she accpeted a position to work as a senior intelligence executive within the FBI. 
+        <p>
+            Baginski was President of National Security Systems at SPARTA after retiring from the FBI, along with several other companies. 
+        </p>
+        </p>
     </h4>
     <hr>
     </body>
