--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,8 @@
     </h2>
     </p>
     <h4>
+        July 18 2023 Katharine Batista
+    </h4>
         <p>
             Maureen Baginski began working as a cryptologist as a Russian language instructor in 1979 in Russia, the NSA during 9/11, and the FBI. 
         </p>
@@ -23,12 +25,19 @@
             Baginski was involved in the 9/11 terriost as she was able to guide the actions of the NSA directly following the attacks.
         </p>
         <p>
-            She  worked for The National Security Operations Center and the Signals Intelligence (SIGINT) as an officer for many years as a cryptologist. However, she was trasnferred to the FBI where she became the director of Intelligence from 2003-2005. After this she accpeted a position to work as a senior intelligence executive within the FBI. 
+            She  worked for The National Security Operations Center and the Signals Intelligence (SIGINT) as an officer for many years as a cryptologist. However, 
+           she was trasnferred to the FBI where she became the director of Intelligence from 2003-2005. After this she accpeted a position to work as a senior intelligence executive within the FBI. 
         <p>
             Baginski was President of National Security Systems at SPARTA after retiring from the FBI, along with several other companies. 
         </p>
+        <p>
+            <a href="https://en.wikipedia.org/wiki/Maureen_Baginski ">Source 1: Wikipedia Maureen Baginski</a> 
         </p>
-    </h4>
+        <p>
+            <a href="https://www.intelligence.gov/index.php/people/barrier-breakers-in-history/660-2005-maureen-baginski">Source 2: 2005: MAUREEN BAGINSKI
+                First Head of FBI's Directorate of Intelligence</a>
+        </p>
+        
     <hr>
     </body>
 </html>
