--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
         <title>IT Girl Blog</title>
         
+        <link rel=stylesheet href=style.css type=text/css>
+    <html lang="en">
+        
     </head>
 
     <body>
@@ -47,7 +50,8 @@
         </p>
         <div class="row" >
             <div class="col-md-6" >
-             <h4>  This meme displays the popular TV show character Pam Beesley holding up two sign comparing data science, also known as DS in the IT world. Machine Learning is  using algorithms models to analyze and draw conclusions from patterns in collected data.Data science is a topic that combines computer science, statics, AI (artifical intelligence), and Machine Learning to analyze and sort data with algorithms. The meme shows that these two disciplines have very similar defintions and are often mistaken for each other to those who are new in the data science field. Referred to as "DS Noobs" in the meme, this implies that they are new data science students getting their BS/BA or MS in Data Science.  </h4> 
+             <p>  This meme displays the popular TV show character Pam Beesley holding up two sign comparing data science, also known as DS in the IT world. Machine Learning is  using algorithms models to analyze and draw conclusions from patterns in collected data.Data science is a topic that combines computer science, statics, AI (artifical intelligence), and Machine Learning to analyze and sort data with algorithms. The meme shows that these two disciplines have very similar defintions and are often mistaken for each other to those who are new in the data science field. Referred to as "DS Noobs" in the meme, this implies that they are new data science students getting their BS/BA or MS in Data Science. This meme provides a humurous to explain that machine learning and data science are very similar to each other and are often cofused wiith the other by new data scientists. 
+             </p> 
              </div>
              <div class="col-md-6" >
                  <div class="meme">
@@ -59,5 +63,9 @@
         <p>
     </div>
     <hr>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
