--- a/index.html
+++ b/index.html
@@ -2,26 +2,43 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- Bootstrap Icons CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
         <title>IT Girl Blog</title>
         
+        <link rel=stylesheet href=style.css type=text/css>
+    <html lang="en">
+        <title>IT Girl Blog</title>
+        
+        <link rel=stylesheet href=style.css type=text/css>
+    <html lang="en">
     </head>
 
     <body>
-        <div class="container">
-            <div class="row" > 
-                <div class="col-sm-12">
+    <div class="container">
+        <div class="text">
+            <div class="btn-group" role="group" aria-label="Basic example">
+                <a href="index.html" class="btn btn-default"> Homepage </a>
+                <a href="blog.html" class="btn btn-default"> Blog </a>
+            </div>
+            <p>
+            <a href="blog.html"> Blog Home</a> 
         <h1>
             Kate Batista's Biography
         </h1>
         <h2>
             Personal Information
         </h2>
-       <h4>
+        <h4>
         Hi, I am Katharine (Kate) Batista. 
-        I live in the USA in Cranford, New Jersey, and I am 16 years old and going into my senior year of high school.
+        I live in the USA in New Jersey, and I am 16 years old and going into my senior year of high school.
         <p>
-        I decided to take this course this summer because I wanted to experience a class with other people just like me with an interest
-        in technology and data. I was looking for a program that would develop my knowledge in STEM.
+        I decided to take this course this summer because I wanted to experience a class with other people just like me with an interest in technology and data. I was looking for a program that would develop my knowledge in STEM.
         </p>
         <p>
         I want to go into Data Science/ Analytics and Computer Science next year for college. 
@@ -45,6 +62,13 @@
        </h4>
         </div>
             </div>
-                </div>
+            </div>
+        </div> 
+        </div>
+    </div>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
