--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,10 @@
         </div>
         <a href="index.html"> Home Page </a> 
         <h2>
+             Photoshop Edit 
+        </h2>
+        <img src="C:\Users\batis\Downloads\PhotoshopEdit1.jpg" height="300px" alt="personal photo" text="photo" />    
+        <h2>
             Machine Learning Meme
         </h2>
         <h4>
