--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
         <h2>
              Photoshop Edit 
         </h2>
-        <img src="C:\Users\batis\Downloads\PhotoshopEdit1.jpg" height="300px" alt="personal photo" text="photo" />    
+        <img src="PhotoshopEdit1.jpg" height="300px" alt="personal photo" text="photo" />    
         <h2>
             Machine Learning Meme
         </h2>
