--- a/blog.html
+++ b/blog.html
@@ -25,10 +25,12 @@
             <a href="blog.html" class="btn btn-default"> Blog </a>
         </div>
         <a href="index.html"> Home Page </a> 
-        <h2>
-             Photoshop Edit 
-        </h2>
-        <img src="PhotoshopEdit1.jpg" height="300px" alt="personal photo" text="photo" />    
+        <div class="jumbotron" > 
+            <img src="PhotoshopEdit1.jpg" height="300px" alt="personal photo" text="photo" /> 
+        </div>   
+        <p>
+            Photoshop Edit 
+        </p> 
         <h2>
             Machine Learning Meme
         </h2>
