--- a/index.html
+++ b/index.html
@@ -2,17 +2,6 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!-- Bootstrap Icons CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-        <title>IT Girl Blog</title>
-        
-        <link rel=stylesheet href=style.css type=text/css>
-    <html lang="en">
         <title>IT Girl Blog</title>
         
         <link rel=stylesheet href=style.css type=text/css>
@@ -20,17 +9,22 @@
     </head>
 
     <body>
+    <p>
     <div class="container">
         <div class="text">
+            <div class="jumbotron">
+
             <div class="btn-group" role="group" aria-label="Basic example">
-                <a href="index.html" class="btn btn-default"> Homepage </a>
-                <a href="blog.html" class="btn btn-default"> Blog </a>
+                <a href="index.html"> Homepage </a>
+                <a href="blog.html"> Blog </a>
             </div>
             <p>
-            <a href="blog.html"> Blog Home</a> 
+            <img src="PhotoshopEdit1.jpg" height="300px" alt="personal photo" text="photo" />    
         <h1>
             Kate Batista's Biography
         </h1>
+        </div>   
+    </div>
         <h2>
             Personal Information
         </h2>
@@ -61,14 +55,6 @@
         </p>
        </h4>
         </div>
-            </div>
-            </div>
-        </div> 
-        </div>
     </div>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
