--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
     <p>
-    <div class="container">
+<div class="container">
         <div class="text">
             <div class="jumbotron">
 
@@ -19,7 +19,10 @@
                 <a href="blog.html"> Blog </a>
             </div>
             <p>
-            <img src="PhotoshopEdit1.jpg" height="300px" alt="personal photo" text="photo" />    
+            <img src="PhotoshopEdit1.jpg" height="300px" alt="personal photo" text="photo" />  
+            <p> 
+                July 20 2023
+            </p>  
         <h1>
             Kate Batista's Biography
         </h1>
@@ -54,7 +57,6 @@
         on campus I am familiar with the surroundings. 
         </p>
        </h4>
-        </div>
-    </div>
+</div>
     </body>
 </html>
