--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>IT Girl Blog</title>
         
-        <link rel=stylesheet href=style.css type=text/css>
+        <link rel="stylesheet" href="styles.css">
     <html lang="en">
         
     </head>
