--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>IT Girl Blog</title>
         
-        <link rel=stylesheet href=style.css type=text/css>
-    <html lang="en">
+        <link rel="stylesheet" href="styles.css">
+            <html lang="en">
     </head>
 
     <body>
