--- a/blog.html
+++ b/blog.html
@@ -19,8 +19,25 @@
         </div>
         <hr>
         <h3>
+
+        <div class="meme">
+            <img src="Infographic IT Girls Empowering Women In STEM.jpg"height= "350px" alt=" infographic design" title="meme" />  
+        </div> 
+        <p>
+            Data Visualization Infographic
+        </p>
+        <p> 
+            Katharine Batista July 24 2023
+        </p>
+        <div class="clear">
+        </div> 
+        <hr>
+        <h3>
             Cryptology Quest: Game Design
         </h3>
+        <p> 
+           Katharine Batista July 21 2023
+        </p>
         <div class="meme">
             <img src="img7.jpg"height= "350px" alt="gamed design" title="meme" />  > 
         </div> 
@@ -34,7 +51,7 @@
             Embedded HTML Tutorial
         </h2>
         <p> 
-            July 21 2023
+            Katharine Batista July 21 2023
         </p>
         <p>
             I chose this particular video to talk about HTML because it ties into our lesson from July 2023 about USer Experience and how the interface of an app and website are designed. I also think that including basic HTML and CSS togther in a short tutorial is a great way to teach others HTML. I really love coding HTMl and this video really hits all of my favorite parts. 
