--- a/blog.html
+++ b/blog.html
@@ -13,22 +13,27 @@
         <p>
 <div class="container">
     <div class="text">
+        <nav>
         <div class="btn-group" role="group" aria-label="Basic example">
             <a href="index.html"> Homepage </a>
+            <p>
             <a href="blog.html"> Blog </a>
         </div>
+       </nav>
         <hr>
         <h3>
 
         <div class="meme">
-            <img src="Infographic IT Girls Empowering Women In STEM.jpg"height= "350px" alt=" infographic design" title="meme" />  
+            <img src="Infographic IT Girls Empowering Women In STEM (1).jpg"height= "350px" alt=" infographic design" title="meme" />  
         </div> 
-        <p>
+        <h2>
             Data Visualization Infographic
-        </p>
+        </h2>
         <p> 
             Katharine Batista July 24 2023
         </p>
+        <h4>
+            The infographic displayed on my wesbite is about the gender, race, age, and 
         <div class="clear">
         </div> 
         <hr>
@@ -42,7 +47,7 @@
             <img src="img7.jpg"height= "350px" alt="gamed design" title="meme" />  > 
         </div> 
         <p> 
-            Our game is called "Crptograhpy Quest" and it is an interactive baord game that uses Crryptograhpy to move forward whilst trying to escape a monster (a rubber ducky in our case). It uses Caesar Cipher and key word shift to decrypt messages throughout the game. Each message is hand decrypted with no devices and has a 30 second time limit. Players can escape a run in with the monster by decrypting a challenge card. Our challenges in creating the game came with time. We did not have enopught time to create all of the encryptions that we wanted, meaning that we did not have enough moves to win the game. We took time while testing the game to troubshoot the game with Laurie. She helped us understand the particality of the game and how to make it competitive or fun depending on the player/team. If we had more time to work on the game I would suggest that we have a higher quality set up, along with more complex encryptions. I would suggest a timer to make the game more intense for players that enjoy that. Overall, i really enjoyed the game and think that it was well done for the time that was given. 
+            Our game is called "Crptograhpy Quest" and it is an interactive baord game that uses Cryptograhpy to move forward whilst trying to escape a monster (a rubber ducky in our case). It uses Caesar Cipher and key word shift to decrypt messages throughout the game. Each message is hand decrypted with no devices and has a 30 second time limit. Players can escape a run in with the monster by decrypting a challenge card. Our challenges in creating the game came with time. We did not have enopught time to create all of the encryptions that we wanted, meaning that we did not have enough moves to win the game. We took time while testing the game to troubshoot the game with Laurie. She helped us understand the particality of the game and how to make it competitive or fun depending on the player/team. If we had more time to work on the game I would suggest that we have a higher quality set up, along with more complex encryptions. I would suggest a timer to make the game more intense for players that enjoy that. Overall, i really enjoyed the game and think that it was well done for the time that was given. 
         </p>
         <div class="clear">
         </div>
