--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,10 @@
             Katharine Batista July 24 2023
         </p>
         <h4>
-            The infographic displayed on my wesbite is about the gender, race, age, and 
+            The infographic displayed on my wesbite is about the gender, race, and age regardless women working in the STEM field. The infograhpic addresses the different sectors of race, subject, 
+        <p>
+            I also was able to address ethincity and race in my infographic by breaking down the sections within the workforce. While doing this I also addressed the percentage of women in each subject. 
+        </h4> 
         <div class="clear">
         </div> 
         <hr>
