--- a/blog.html
+++ b/blog.html
@@ -13,13 +13,11 @@
         <p>
 <div class="container">
     <div class="text">
-        <nav>
         <div class="btn-group" role="group" aria-label="Basic example">
-            <a href="index.html"> Homepage </a>
-            <p>
-            <a href="blog.html"> Blog </a>
+        <nav>
+            <a href="index.html"> Homepage </a> | <a href="blog.html"> Blog </a>
+        </nav>
         </div>
-       </nav>
         <hr>
         <h3>
 
