--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 <div class="container">
         <div class="text">
             <div class="jumbotron">
-
+           
             <div class="btn-group" role="group" aria-label="Basic example">
-                <a href="index.html"> Homepage </a>
-                <a href="blog.html"> Blog </a>
+            <nav>
+                <a href="index.html"> Homepage </a> | <a href="blog.html"> Blog </a>
+            </nav> 
             </div>
             <p>
             <img src="PhotoshopEdit1.jpg" height="300px" alt="personal photo" text="photo" />  
