--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,9 @@
             </p>
         <div class="meme">
             <img src="walle.jpg" height= "350px" alt="human interaction" title="walle" />  
+            <p> 
+                Walt Disney Studios 2008 Feature Film Wall-E
+            </p> 
         </div>
         <h4>
             My favorite robot is Wall-E because he represents the depressing nature of the human mind in society. I believe that he represents the idea of a classically boring life and the negativity exhibited in our lives. I connect with Wall-E because it is very difficult to not only see the negative things that our lives have to offer us. Wall- E humanized AI and robots for us by showing us that they are created by someone somewhere. However, it also shows robots are not human. They will continue to work and do their jobs potentially when someone is not even telling them to do something. We as people are naturally subjected to the idea that everything will turn “sour.” I think meeting Rae showed me that robots can be useful to our world and we may be able to connect with them. Especially if there is someone else on the other end. In the future, I think addressing how robots activate the human mind whether it be AI or a physical robot. We also have to use robots and AI with caution, realizing that sometimes those can be biased too. Humans have to trust themselves without the help of interactive technology. 
