--- a/blog.html
+++ b/blog.html
@@ -11,14 +11,43 @@
 
     <body>      
         <p>
-<div class="container">
+<div>
     <div class="text">
         <div class="btn-group" role="group" aria-label="Basic example">
         <nav>
             <a href="index.html"> Homepage </a> | <a href="blog.html"> Blog </a>
         </nav>
         </div>
-        <hr>
+        <div class="row">
+            <img src="Strong9.jpeg" height="350px" alt="strong" title="Musesum">
+        </div>
+        <h2>
+            STRONG Museum Exploration
+        <h4>
+            Katharine Batista July 26 2023
+            <p>
+            I really enjoyed exploring Seaseme Street with my fellow IT Girls. We were able to bond over the little things that we have all experienced throughout our lives. I learned a lot about everyone while we spent the day together. 
+        </h4> 
+       
+        <div class="row">
+
+            <img src="Strong1.jpeg" height="250" alt="strong project" title="project" >  
+            <img src="Strong2.jpeg" height="250" alt="strong project" title="project" >   
+            <img src="Strong3.jpeg" height="250" alt="strong project" title="project" >  
+            <img src="Strong4.jpeg" height="250" alt="strong project" title="project" > 
+        </div> 
+        <h2>
+            STRONG Museum Analysis
+        </h2>
+        <h4>
+            Katharine Batista July 26 2023
+            <p>
+            Hannah and I worked together to create a program about including women within the gaming design field and catering the games toward both genders. Women are often left out of the conversation when creating content in games. We were able to address how we could include women and get them more involved in the development of games. We were able to ask the question, "How can we involve women in traditional gaming spaces?"
+        </h4>
+        <div class="clear">
+        </div> 
+        <h2> 
+            Strong Musesum 
         <h2>
             Robot Human Interactions
         </h2>
@@ -26,7 +55,7 @@
                 Katharine Batista July 25, 2023
             </p>
         <div class="meme">
-            <img src="walle.jpg" height= "350px" alt="human interaction" title="walle" />  
+            <img src="walle.jpg" height= "350px" alt="human interaction" title="walle" >  
             <p> 
                 Walt Disney Studios 2008 Feature Film Wall-E
             </p> 
@@ -36,9 +65,8 @@
         </h4> 
         <div class="clear">
         </div>
-        <hr>
         <div class="meme">
-            <img src="Infographic IT Girls Empowering Women In STEM (1).jpg"height= "350px" alt=" infographic design" title="meme" />  
+            <img src="Infographic IT Girls Empowering Women In STEM (1).jpg"height= "350px" alt=" infographic design" title="meme">  
         </div> 
         <h2>
             Data Visualization Infographic
@@ -53,7 +81,6 @@
         </h4> 
         <div class="clear">
         </div> 
-        <hr>
         <h3>
             Cryptology Quest: Game Design
         </h3>
@@ -61,14 +88,13 @@
            Katharine Batista July 21, 2023
         </p>
         <div class="meme">
-            <img src="img7.jpg"height= "350px" alt="gamed design" title="meme" />  > 
+            <img src="img7.jpg"height= "350px" alt="gamed design" title="meme" > 
         </div> 
         <p> 
             Our game is called "Crptograhpy Quest" and it is an interactive board game that uses Cryptograhpy to move forward whilst trying to escape a monster (a rubber ducky in our case). It uses Caesar Cipher and keyword shift to decrypt messages throughout the game. Each message is hand decrypted with no devices and has a 30-second time limit. Players can escape a run-in with the monster by decrypting a challenge card. Our challenges in creating the game came with time. We did not have enough time to create all of the encryptions that we wanted, meaning that we did not have enough moves to win the game. We took time while testing the game to troubleshoot the game with Laurie. She helped us understand the practicality of the game and how to make it competitive or fun depending on the player/team. If we had more time to work on the game I would suggest that we have a higher-quality setup, along with more complex encryptions. I would suggest a timer to make the game more intense for players that enjoy that. Overall, I really enjoyed the game and think that it was well done for the time that was given. 
         </p>
         <div class="clear">
         </div>
-        <hr>
         <h2>
             Embedded HTML Tutorial
         </h2>
@@ -79,7 +105,6 @@
             I chose this particular video to talk about HTML because it ties into our lesson from July 2023 about User Experience and how the interface of an app and website are designed. I also think that including basic HTML and CSS together in a short tutorial is a great way to teach others HTML. I really love coding HTMl and this video really hits all of my favorite parts. 
         </p> 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/p1GmFCGuVjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <hr>
         <h2>
             Machine Learning Meme
         </h2>
@@ -103,14 +128,10 @@
         <p>
         <div class="clear">
         </div>
-    <hr>
         <h2>
-            Maureen Baginski         
+            Maureen Baginski:  Cryptology Research Blog     
         </h2>
     <p>
-    <h4>
-        Cryptology Research Blog
-    </h4>
     </p>
     <h4>
        Katharine Batista  July 18, 2023
@@ -136,6 +157,7 @@
         </p>
         <br>
     </div>
+</div>
 </div>
     </body>
 </html>
