--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
     <body>
     <p>
-<div class="container">
+<div>
         <div class="text">
-            <div class="jumbotron">
            
             <div class="btn-group" role="group" aria-label="Basic example">
             <nav>
@@ -24,14 +23,11 @@
             <p> 
                 July 20 2023
             </p>  
+        
         <h1>
             Kate Batista's Biography
         </h1>
-        </div>   
     </div>
-        <h2>
-            Personal Information
-        </h2>
         <h4>
         Hi, I am Katharine (Kate) Batista. 
         I live in the USA in New Jersey, and I am 16 years old and going into my senior year of high school.
