--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
         <title>IT Girl Blog</title>
         
         <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <html lang="en">
         
     </head>
