--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,9 @@
         <div class="btn-group" role="group" aria-label="Basic example">
         <nav>
             <a href="index.html"> Homepage </a> | <a href="blog.html"> Blog </a>
+            <p> 
+                icon designed by Freepik from Flaticon
+            </p> 
         </nav>
         </div>
         <div class="row">
